# ChessOxygine

./: .gitignore  README.md
data/: res.xml  scheme.mdj  todo.txt
proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh  settings.gradle
proj.android/jni/src/: Android.mk
proj.android/src/org/oxygine/Chess/: MainActivity.java
proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
proj.ios/Chess_ios.xcodeproj/: project.pbxproj
proj.ios_mac/Chess.xcodeproj/: project.pbxproj
proj.macosx/Chess_macosx.xcodeproj/: project.pbxproj
proj.win32/: Chess.sln  Chess.vcxproj
src/: Cell.cpp  Cell.h  Chessboard.cpp  Chessboard.h  GameManager.cpp  GameManager.h  Piece.cpp  Piece.h  main.cpp  res.cpp  res.h
